added some generic fields

--- a/application/public/html/login.html
+++ b/application/public/html/login.html
@@ -11,12 +11,22 @@
   <body>
     <!--Header -->
     <header>
-      <h1>This is a banner</h1>
+      <h1>App</h1>
     </header>
     <nav>
       <a href="./index.html">Home</a>
-      <a href="./login.html">Login</a>
+      <a href="./login.html">Log in</a>
+      <a href="./Registration.html">Sign up</a>
+      <a href="./postimage.html">Create New Post</a>
+      <a href="./viewpost.html">View Posts</a>
     </nav>
-    <main></main>
+    <h2>Log in</h2>
+    <main>
+      <form action="">
+        <label for="text">Username:</label>
+        <input type="text" id="text" />
+      </form>
+    </main>
+    <footer>&copy Footer 2022</footer>
   </body>
 </html>
