--- a/application/public/html/login.html
+++ b/application/public/html/login.html
@@ -27,6 +27,6 @@
         <input type="text" id="text" />
       </form>
     </main>
-    <footer>&copy Footer 2022</footer>
+    <footer>Footer &copy2022</footer>
   </body>
 </html>
