--- a/application/public/html/login.html
+++ b/application/public/html/login.html
@@ -23,8 +23,11 @@
     <h2>Log in</h2>
     <main>
       <form action="">
-        <label for="text">Username:</label>
-        <input type="text" id="text" />
+        <label for="username">Username:</label>
+        <input type="text" id="username" />
+        <label for="username">Password:</label>
+        <input type="password" id="password" />
+        <button type="submit">Submit</button>
       </form>
     </main>
     <footer>Footer &copy2022</footer>
