--- a/application/public/html/login.html
+++ b/application/public/html/login.html
@@ -11,7 +11,7 @@
   <body>
     <!--Header -->
     <header>
-      <h1>App</h1>
+      <h1>A Website</h1>
     </header>
     <nav>
       <a href="./index.html">Home</a>
@@ -25,7 +25,7 @@
       <form action="">
         <label for="username">Username:</label>
         <input type="text" id="username" />
-        <label for="username">Password:</label>
+        <label for="password">Password:</label>
         <input type="password" id="password" />
         <button type="submit">Submit</button>
       </form>
