--- a/application/public/html/index.html
+++ b/application/public/html/index.html
@@ -11,7 +11,7 @@
   <body>
     <!--Header -->
     <header>
-      <h1>App</h1>
+      <h1>A Website</h1>
     </header>
     <nav>
       <a href="./index.html">Home</a>
