--- a/application/public/html/postimage.html
+++ b/application/public/html/postimage.html
@@ -21,7 +21,20 @@
       <a href="./viewpost.html">View Posts</a>
     </nav>
     <h2>Post Image</h2>
-    <main></main>
+    <main>
+      <form action="">
+        <label for="Title">Post title:</label><br />
+        <input type="text" id="title" name="title" /><br />
+        <label for="desc">Description:</label><br />
+        <textarea name="desc" id="" cols="50" rows="7"></textarea><br />
+        <input type="file" name="image" id="image" /><br />
+        <input type="checkbox" name="userpolicy" id="userpolicy" />
+        <label for="userpolicy"
+          >Accept the <a href="">Acceptable Use Policy</a><br />
+          <button type="submit">Submit</button>
+        </label>
+      </form>
+    </main>
     <footer>Footer &copy2022</footer>
   </body>
 </html>
