--- a/application/public/html/registration.html
+++ b/application/public/html/registration.html
@@ -30,14 +30,13 @@
         <label for="confirmpassword">Confirm password:</label>
         <input type="password" id="confirmpassword" />
         <div>
-          <label for="over13">I am at least 13 years old</label>
           <input type="checkbox" name="over13" id="over13" />
+          <label for="over13">I am at least 13 years old</label>
           <div>
-            <label for="tos"
-              >Accept our
-              <a href="">TOS and Privacy Rules</a>
-            </label>
             <input type="checkbox" name="tos" id="tos" />
+            <label for="tos"
+              >Accept our <a href="">TOS and Privacy Rules</a>
+            </label>
             <div>
               <button type="submit">Submit</button>
             </div>
