viewpost complete, cleaned up code

--- a/application/public/html/postimage.html
+++ b/application/public/html/postimage.html
@@ -30,7 +30,11 @@
         <input type="file" name="image" id="image" /><br />
         <input type="checkbox" name="userpolicy" id="userpolicy" />
         <label for="userpolicy"
-          >Accept the <a href="">Acceptable Use Policy</a><br />
+          >Accept the
+          <a href="http://" target="_blank" rel="noopener noreferrer">
+            Acceptable Use Policy
+          </a>
+          <br />
           <button type="submit">Submit</button>
         </label>
       </form>
