--- a/application/public/html/registration.html
+++ b/application/public/html/registration.html
@@ -34,8 +34,11 @@
           <label for="over13">I am at least 13 years old</label>
           <div>
             <input type="checkbox" name="tos" id="tos" />
-            <label for="tos"
-              >Accept our <a href="">TOS and Privacy Rules</a>
+            <label for="tos">
+              Accept our
+              <a href="http://" target="_blank" rel="noopener noreferrer">
+                TOS and Privacy Rules
+              </a>
             </label>
             <div>
               <button type="submit">Submit</button>
