--- a/application/public/html/viewpost.html
+++ b/application/public/html/viewpost.html
@@ -22,12 +22,15 @@
     </nav>
     <h2>View Posts</h2>
     <main>
-      <h3>Post Title</h3>
-      <h4>Author Name</h4>
-      <p>01/01/2000</p>
-      <img
-        src="https://fakeimg.pl/200x100/282828/eae0d0/?retina=1"
-        alt="Fake image not found :(" />
+      <section>
+        <p>title</p>
+        <p>desc</p>
+        <p>author</p>
+        <p>date posted</p>
+        <img
+          src="https://fakeimg.pl/200x100/282828/eae0d0/?retina=1"
+          alt="Fake image not found :(" />
+      </section>
     </main>
     <footer>Footer &copy2022</footer>
   </body>
