--- a/application/public/html/postimage.html
+++ b/application/public/html/postimage.html
@@ -26,7 +26,7 @@
         <label for="Title">Post title:</label><br />
         <input type="text" id="title" name="title" /><br />
         <label for="desc">Description:</label><br />
-        <textarea name="desc" id="" cols="50" rows="7"></textarea><br />
+        <textarea name="desc" id="desc" cols="50" rows="7"></textarea><br />
         <input type="file" name="image" id="image" /><br />
         <input type="checkbox" name="userpolicy" id="userpolicy" />
         <label for="userpolicy"
