just some fiddling for now

--- a/application/public/html/index.html
+++ b/application/public/html/index.html
@@ -6,24 +6,34 @@
     <title>Home</title>
     <meta name="description" content="Desription" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
   </head>
   <body>
-    <!--Header -->
     <header>
       <h1>A Website</h1>
     </header>
     <nav>
-      <a href="./index.html">Home</a>
-      <a href="./login.html">Log in</a>
-      <a href="./Registration.html">Sign up</a>
-      <a href="./postimage.html">Create New Post</a>
-      <a href="./viewpost.html">View Posts</a>
+      <cite>
+        <a href="./index.html"><mark>Home</mark></a>
+      </cite>
+      <cite>
+        <a href="./login.html">Log in</a>
+      </cite>
+      <cite>
+        <a href="./Registration.html">Sign up</a>
+      </cite>
+      <cite>
+        <a href="./postimage.html">Create New Post</a>
+      </cite>
+      <cite>
+        <a href="./viewpost.html">View Posts</a>
+      </cite>
     </nav>
     <h2>Home</h2>
     <main>
       <h3>Main page content</h3>
       <div>
+        <hr />
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -33,6 +43,7 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
+        <hr />
       </div>
     </main>
     <footer>Footer &copy2022</footer>
