--- a/application/public/html/login.html
+++ b/application/public/html/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
     <meta name="description" content="Desription" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
   </head>
   <body>
     <!--Header -->
@@ -14,18 +14,28 @@
       <h1>A Website</h1>
     </header>
     <nav>
-      <a href="./index.html">Home</a>
-      <a href="./login.html">Log in</a>
-      <a href="./Registration.html">Sign up</a>
-      <a href="./postimage.html">Create New Post</a>
-      <a href="./viewpost.html">View Posts</a>
+      <cite>
+        <a href="./index.html">Home</a>
+      </cite>
+      <cite>
+        <a href="./login.html"><mark>Log in</mark></a>
+      </cite>
+      <cite>
+        <a href="./Registration.html">Sign up</a>
+      </cite>
+      <cite>
+        <a href="./postimage.html">Create New Post</a>
+      </cite>
+      <cite>
+        <a href="./viewpost.html">View Posts</a>
+      </cite>
     </nav>
     <h2>Log in</h2>
     <main>
       <form action="">
-        <label for="username">Username:</label>
+        <label for="username">Username</label>
         <input type="text" id="username" />
-        <label for="password">Password:</label>
+        <label for="password">Password</label>
         <input type="password" id="password" />
         <button type="submit">Submit</button>
       </form>
