--- a/application/public/html/viewpost.html
+++ b/application/public/html/viewpost.html
@@ -6,7 +6,7 @@
     <title>View Post</title>
     <meta name="description" content="Desription" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
   </head>
   <body>
     <!--Header -->
@@ -14,11 +14,21 @@
       <h1>A Website</h1>
     </header>
     <nav>
-      <a href="./index.html">Home</a>
-      <a href="./login.html">Log in</a>
-      <a href="./Registration.html">Sign up</a>
-      <a href="./postimage.html">Create New Post</a>
-      <a href="./viewpost.html">View Posts</a>
+      <cite>
+        <a href="./index.html">Home</a>
+      </cite>
+      <cite>
+        <a href="./login.html">Log in</a>
+      </cite>
+      <cite>
+        <a href="./Registration.html">Sign up</a>
+      </cite>
+      <cite>
+        <a href="./postimage.html">Create New Post</a>
+      </cite>
+      <cite>
+        <a href="./viewpost.html"><mark>View Posts</mark></a>
+      </cite>
     </nav>
     <h2>View Posts</h2>
     <main>
@@ -35,3 +45,4 @@
     <footer>Footer &copy2022</footer>
   </body>
 </html>
+
