css + rearrange html

--- a/application/public/html/login.html
+++ b/application/public/html/login.html
@@ -14,21 +14,11 @@
       <h1>A Website</h1>
     </header>
     <nav>
-      <cite>
-        <a href="./index.html">Home</a>
-      </cite>
-      <cite>
-        <a href="./login.html"><mark>Log in</mark></a>
-      </cite>
-      <cite>
-        <a href="./Registration.html">Sign up</a>
-      </cite>
-      <cite>
-        <a href="./postimage.html">Create New Post</a>
-      </cite>
-      <cite>
-        <a href="./viewpost.html">View Posts</a>
-      </cite>
+      <a href="./index.html">Home</a>
+      <a href="./login.html"><mark>Log in</mark></a>
+      <a href="./Registration.html">Sign up</a>
+      <a href="./postimage.html">New Post</a>
+      <a href="./viewpost.html">View Posts</a>
     </nav>
     <h2>Log in</h2>
     <main>
