--- a/application/public/html/postimage.html
+++ b/application/public/html/postimage.html
@@ -14,21 +14,11 @@
       <h1>A Website</h1>
     </header>
     <nav>
-      <cite>
-        <a href="./index.html">Home</a>
-      </cite>
-      <cite>
-        <a href="./login.html">Log in</a>
-      </cite>
-      <cite>
-        <a href="./Registration.html">Sign up</a>
-      </cite>
-      <cite>
-        <a href="./postimage.html"><mark>Create New Post</mark></a>
-      </cite>
-      <cite>
-        <a href="./viewpost.html">View Posts</a>
-      </cite>
+      <a href="./index.html">Home</a>
+      <a href="./login.html">Log in</a>
+      <a href="./Registration.html">Sign up</a>
+      <a href="./postimage.html"><mark>New Post</mark></a>
+      <a href="./viewpost.html">View Posts</a>
     </nav>
     <h2>Post Image</h2>
     <main>
