--- a/application/public/html/index.html
+++ b/application/public/html/index.html
@@ -13,21 +13,11 @@
       <h1>A Website</h1>
     </header>
     <nav>
-      <cite>
-        <a href="./index.html"><mark>Home</mark></a>
-      </cite>
-      <cite>
-        <a href="./login.html">Log in</a>
-      </cite>
-      <cite>
-        <a href="./Registration.html">Sign up</a>
-      </cite>
-      <cite>
-        <a href="./postimage.html">Create New Post</a>
-      </cite>
-      <cite>
-        <a href="./viewpost.html">View Posts</a>
-      </cite>
+      <a href="./index.html"><mark>Home</mark></a>
+      <a href="./login.html">Log in</a>
+      <a href="./Registration.html">Sign up</a>
+      <a href="./postimage.html">New Post</a>
+      <a href="./viewpost.html">View Posts</a>
     </nav>
     <h2>Home</h2>
     <main>
