--- a/application/public/html/registration.html
+++ b/application/public/html/registration.html
@@ -14,30 +14,20 @@
       <h1>A Website</h1>
     </header>
     <nav>
-      <cite>
-        <a href="./index.html">Home</a>
-      </cite>
-      <cite>
-        <a href="./login.html">Log in</a>
-      </cite>
-      <cite>
-        <a href="./Registration.html"><mark>Sign up</mark></a>
-      </cite>
-      <cite>
-        <a href="./postimage.html">Create New Post</a>
-      </cite>
-      <cite>
-        <a href="./viewpost.html">View Posts</a>
-      </cite>
+      <a href="./index.html">Home</a>
+      <a href="./login.html">Log in</a>
+      <a href="./Registration.html"><mark>Sign up</mark></a>
+      <a href="./postimage.html">New Post</a>
+      <a href="./viewpost.html">View Posts</a>
     </nav>
     <h2>Sign up</h2>
     <main>
       <form action="">
-        <label for="username">Username</label> <br>
+        <label for="username">Username</label> <br />
         <input type="text" id="username" /> <br />
-        <label for="password">Password</label> <br>
+        <label for="password">Password</label> <br />
         <input type="password" id="password" /> <br />
-        <label for="confirmpassword">Confirm</label> <br>
+        <label for="confirmpassword">Confirm</label> <br />
         <input type="password" id="confirmpassword" /> <br />
         <input type="checkbox" name="over13" id="over13" />
         <label for="over13">I am at least 13 years old</label> <br />
