--- a/application/public/html/viewpost.html
+++ b/application/public/html/viewpost.html
@@ -14,21 +14,11 @@
       <h1>A Website</h1>
     </header>
     <nav>
-      <cite>
-        <a href="./index.html">Home</a>
-      </cite>
-      <cite>
-        <a href="./login.html">Log in</a>
-      </cite>
-      <cite>
-        <a href="./Registration.html">Sign up</a>
-      </cite>
-      <cite>
-        <a href="./postimage.html">Create New Post</a>
-      </cite>
-      <cite>
-        <a href="./viewpost.html"><mark>View Posts</mark></a>
-      </cite>
+      <a href="./index.html">Home</a>
+      <a href="./login.html">Log in</a>
+      <a href="./Registration.html">Sign up</a>
+      <a href="./postimage.html">New Post</a>
+      <a href="./viewpost.html"><mark>View Posts</mark></a>
     </nav>
     <h2>View Posts</h2>
     <main>
@@ -45,4 +35,3 @@
     <footer>Footer &copy2022</footer>
   </body>
 </html>
-
