--- a/application/public/html/index.html
+++ b/application/public/html/index.html
@@ -12,30 +12,36 @@
     <header>
       <h1>A Website</h1>
     </header>
-    <nav>
-      <a href="./index.html"><mark>Home</mark></a>
-      <a href="./login.html">Log in</a>
-      <a href="./Registration.html">Sign up</a>
-      <a href="./postimage.html">New Post</a>
-      <a href="./viewpost.html">View Posts</a>
-    </nav>
-    <h2>Home</h2>
-    <main>
-      <h3>Main page content</h3>
-      <div>
-        <hr />
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <hr />
+    <div id="nav-menu" class="nav-menu-container">
+      <div class="nav-menu">
+        <a href="./index.html" class="nav-button index on">HOME</a>
+        <a href="./login.html" class="nav-button login">LOG IN</a>
+        <a href="./Registration.html" class="nav-button registration">
+          SIGN UP
+        </a>
+        <a href="./postimage.html" class="nav-button postimage">NEW POST</a>
+        <a href="./viewpost.html" class="nav-button viewpost">VIEW POSTS</a>
       </div>
-    </main>
+    </div>
+    <div class="main-container">
+      <h2>Home</h2>
+      <main>
+        <h3>Main page content</h3>
+        <div>
+          <hr />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <hr />
+        </div>
+      </main>
+    </div>
     <footer>Footer &copy2022</footer>
   </body>
 </html>
