--- a/application/public/html/registration.html
+++ b/application/public/html/registration.html
@@ -13,35 +13,41 @@
     <header>
       <h1>A Website</h1>
     </header>
-    <nav>
-      <a href="./index.html">Home</a>
-      <a href="./login.html">Log in</a>
-      <a href="./Registration.html"><mark>Sign up</mark></a>
-      <a href="./postimage.html">New Post</a>
-      <a href="./viewpost.html">View Posts</a>
-    </nav>
-    <h2>Sign up</h2>
-    <main>
-      <form action="">
-        <label for="username">Username</label> <br />
-        <input type="text" id="username" /> <br />
-        <label for="password">Password</label> <br />
-        <input type="password" id="password" /> <br />
-        <label for="confirmpassword">Confirm</label> <br />
-        <input type="password" id="confirmpassword" /> <br />
-        <input type="checkbox" name="over13" id="over13" />
-        <label for="over13">I am at least 13 years old</label> <br />
-        <input type="checkbox" name="tos" id="tos" />
-        <label for="tos">
-          Accept our
-          <a href="http://" target="_blank" rel="noopener noreferrer">
-            TOS and Privacy Rules
-          </a>
-        </label>
-        <br />
-        <button type="submit">Submit</button>
-      </form>
-    </main>
+    <div id="nav-menu" class="nav-menu-container">
+      <div class="nav-menu">
+        <a href="./index.html" class="nav-button index">HOME</a>
+        <a href="./login.html" class="nav-button login">LOG IN</a>
+        <a href="./Registration.html" class="nav-button registration on">
+          SIGN UP
+        </a>
+        <a href="./postimage.html" class="nav-button postimage">NEW POST</a>
+        <a href="./viewpost.html" class="nav-button viewpost">VIEW POSTS</a>
+      </div>
+    </div>
+    <div class="main-container">
+      <h2>Sign up</h2>
+      <main>
+        <form action="">
+          <label for="username">Username</label> <br />
+          <input type="text" id="username" /> <br />
+          <label for="password">Password</label> <br />
+          <input type="password" id="password" /> <br />
+          <label for="confirmpassword">Confirm</label> <br />
+          <input type="password" id="confirmpassword" /> <br />
+          <input type="checkbox" name="over13" id="over13" />
+          <label for="over13">I am at least 13 years old</label> <br />
+          <input type="checkbox" name="tos" id="tos" />
+          <label for="tos">
+            Accept our
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              TOS and Privacy Rules
+            </a>
+          </label>
+          <br />
+          <button type="submit">Submit</button>
+        </form>
+      </main>
+    </div>
     <footer>Footer &copy2022</footer>
   </body>
 </html>
