why is the r capitalized

--- a/application/public/html/login.html
+++ b/application/public/html/login.html
@@ -17,7 +17,7 @@
       <div class="nav-menu">
         <a href="./index.html" class="nav-button index">HOME</a>
         <a href="./login.html" class="nav-button login on">LOG IN</a>
-        <a href="./Registration.html" class="nav-button registration">
+        <a href="./registration.html" class="nav-button registration">
           SIGN UP
         </a>
         <a href="./postimage.html" class="nav-button postimage">NEW POST</a>
