--- a/application/public/html/index.html
+++ b/application/public/html/index.html
@@ -16,7 +16,7 @@
       <div class="nav-menu">
         <a href="./index.html" class="nav-button index on">HOME</a>
         <a href="./login.html" class="nav-button login">LOG IN</a>
-        <a href="./Registration.html" class="nav-button registration">
+        <a href="./registration.html" class="nav-button registration">
           SIGN UP
         </a>
         <a href="./postimage.html" class="nav-button postimage">NEW POST</a>
