--- a/application/public/html/registration.html
+++ b/application/public/html/registration.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Desription" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <script defer type="text/javascript" src="../js/validation.js"></script>
   </head>
   <body>
     <!--Header -->
