--- a/application/public/html/index.html
+++ b/application/public/html/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Desription" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <script defer type="text/javascript" src="../js/fetch.js"></script>
   </head>
   <body>
     <header>
@@ -27,19 +28,7 @@
       <h2>Home</h2>
       <main>
         <h3>Main page content</h3>
-        <div>
-          <hr />
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-          <hr />
-        </div>
+        <div id="img-list"></div>
       </main>
     </div>
     <footer>Footer &copy2022</footer>
