--- a/application/public/html/index.html
+++ b/application/public/html/index.html
@@ -29,6 +29,7 @@
       <main>
         <h3>Main page content</h3>
         <div id="img-list"></div>
+        <div id="img-count"></div>
       </main>
     </div>
     <footer>Footer &copy2022</footer>
