Various fixes and formatting

--- a/application/public/html/viewpost.html
+++ b/application/public/html/viewpost.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -34,7 +34,8 @@
           <p>date posted</p>
           <img
             src="https://fakeimg.pl/200x100/282828/eae0d0/?retina=1"
-            alt="Fake image not found :(" />
+            alt="Fake image not found :("
+          />
         </section>
       </main>
     </div>
