--- a/application/public/html/registration.html
+++ b/application/public/html/registration.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -43,7 +43,9 @@
             <li>Contains at least one number</li>
             <li>Contains at least one uppercase letter</li>
             <li>Contains at least one lowercase letter</li>
-            <li>Contains at least one special character: / * - + ! @ # $ ^ & ~ [ ]</li>
+            <li>
+              Contains at least one special character: / * - + ! @ # $ ^ & ~ [ ]
+            </li>
           </ul>
           <label for="confirmpassword">Confirm</label> <br />
           <input type="password" id="confirmpassword" /> <br />
